--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 500px;
+  height: 82vh;
   color: black;
   font-family: 'Fraunces', serif;
 }
