--- a/src/app.html
+++ b/src/app.html
@@ -21,10 +21,18 @@
 #content{
 font-family: 'Noto Sans', sans-serif;
 }
+#stfu-button-cont {
+    display: flex; 
+    position: fixed; /* Makes it stay put on screen, ignores scrolling */
+    top: 0.6em; /* Distance from the top of the browser window */
+    left: 0.8em; /* Distance from the right of the browser window */
+    z-index: 1000; /* Ensures it stays above other content */
+    font-size: 1.1250em;
+}
 </style>
 
 		%sveltekit.head%
-		<script src="/indexsite-new/client-js/ad-detect.js"></script>
+		<!--script src="/indexsite-new/client-js/ad-detect.js"></script-->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
